compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bit_arrays__empty_match.snap
---
source: compiler-core/src/go/tests/bit_arrays.rs
assertion_line: 313
expression: "\nfn go(x) {\n  let assert <<>> = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(x) {
  let assert <<>> = x
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ(x gleam_P.BitArray_t) gleam_P.BitArray_t {
  if !(len(x) == 0) {
    panic(gleam_P.MakeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      map[string]any{"value": x },
    ))
  }
  return x
}
