compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bit_arrays__explicit_sized_dynamic_value.snap
---
source: compiler-core/src/go/tests/bit_arrays.rs
expression: "\nfn go(i: Int) {\n  <<i:size(32)>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(i: Int) {
  <<i:size(32)>>
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ(i gleam_P.Int_t) gleam_P.BitArray_t {
  return gleam_P.ToBitArray(gleam_P.SizedInt(i, 32, true))
}
