compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bit_arrays__float_big_endian.snap
---
source: compiler-core/src/go/tests/bit_arrays.rs
assertion_line: 60
expression: "\nfn go() {\n  <<1.1:float-big>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  <<1.1:float-big>>
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ() gleam_P.BitArray_t {
  return gleam_P.ToBitArray(gleam_P.SizedFloat(1.1, 64, true))
}
